tests/failing/missing_columns_test.stderr
error: No #[column(...)] fields found. You must have at least one field with #[column].
 --> tests/failing/missing_columns_test.rs:4:1
  |
4 | struct MissingColumnsStruct {
  | ^^^^^^
